@@ -1,3 +1,14 @@
+2011-04-22  Balazs Kelemen  <kbalazs@webkit.org>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt][WK2] Cannot play flash with NSPluginWrapper
+        https://bugs.webkit.org/show_bug.cgi?id=59125
+
+        * WebProcess/Plugins/Netscape/NetscapeBrowserFuncs.cpp:
+        (WebKit::NPN_GetValue): Handle the case when we have been
+        called with a null plugin instance.
+
 2011-04-22  Andreas Kling  <andreas.kling@nokia.com>
 
         Reviewed by Sam Weinig.
